--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "twiv2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
+    "@rooks/use-window-size": "4.11.2",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
-  }
+    "react-comic-viewer": "0.2.1",
+    "react-dom": "17.0.2",
+    "react-grid-system": "7.2.0",
+    "ress": "4.0.0",
+    "sass": "1.32.13",
+    "sass-mq": "5.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "15.12.1",
+    "@types/react": "17.0.9",
+    "typescript": "4.3.2"
+  },
+  "name": "twiv2",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "start": "next start"
+  },
+  "version": "0.1.0"
 }
