--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "dependencies": {
     "@rooks/use-window-size": "4.11.2",
+    "axios": "0.21.1",
+    "firebase": "8.6.7",
+    "firebase-admin": "9.9.0",
+    "firebaseui-ja": "1.0.0",
     "next": "10.2.3",
+    "nookies": "2.5.2",
     "react": "17.0.2",
     "react-comic-viewer": "0.2.1",
     "react-dom": "17.0.2",
+    "react-firebaseui": "5.0.2",
     "react-grid-system": "7.2.0",
     "ress": "4.0.0",
     "sass": "1.32.13",
