--- a/package.json
+++ b/package.json
@@ -12,21 +12,182 @@
     "react-dom": "17.0.2",
     "react-firebaseui": "5.0.2",
     "react-grid-system": "7.2.0",
+    "react-use-measure": "2.0.4",
     "ress": "4.0.0",
     "sass": "1.32.13",
     "sass-mq": "5.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "12.1.4",
+    "@commitlint/config-conventional": "12.1.4",
     "@types/node": "15.12.1",
     "@types/react": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.26.1",
+    "@typescript-eslint/parser": "4.26.1",
+    "eslint": "7.28.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-css-modules": "2.11.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-sort-keys-shorthand": "2.1.0",
+    "husky": "6.0.0",
+    "lint-staged": "11.0.0",
+    "prettier": "2.3.1",
+    "stylelint": "13.13.1",
+    "stylelint-config-css-modules": "2.2.0",
+    "stylelint-config-recommended-scss": "4.2.0",
+    "stylelint-config-sass-guidelines": "8.0.0",
+    "stylelint-scss": "3.19.0",
     "typescript": "4.3.2"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "commonjs": true,
+      "es6": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:prettier/recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings",
+      "plugin:import/typescript",
+      "plugin:react-hooks/recommended",
+      "plugin:jsx-a11y/recommended",
+      "plugin:css-modules/recommended",
+      "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 2020,
+      "project": [
+        "./tsconfig.json"
+      ],
+      "sourceType": "module"
+    },
+    "plugins": [
+      "prettier",
+      "react",
+      "@typescript-eslint",
+      "import",
+      "sort-keys-shorthand",
+      "jsx-a11y",
+      "css-modules"
+    ],
+    "rules": {
+      "import/order": [
+        "error",
+        {
+          "alphabetize": {
+            "caseInsensitive": true,
+            "order": "asc"
+          }
+        }
+      ],
+      "jsx-a11y/anchor-is-valid": [
+        "error",
+        {
+          "aspects": [
+            "invalidHref",
+            "preferButton"
+          ],
+          "components": [
+            "Link"
+          ],
+          "specialLink": [
+            "hrefLeft",
+            "hrefRight"
+          ]
+        }
+      ],
+      "prettier/prettier": "error",
+      "react/jsx-sort-props": [
+        "error",
+        {
+          "callbacksLast": false,
+          "ignoreCase": false,
+          "noSortAlphabetically": false,
+          "reservedFirst": false,
+          "shorthandFirst": false,
+          "shorthandLast": false
+        }
+      ],
+      "sort-keys-shorthand/sort-keys-shorthand": [
+        "error",
+        "asc",
+        {
+          "caseSensitive": true,
+          "natural": true,
+          "shorthand": "first"
+        }
+      ]
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "paths": [
+            "src"
+          ]
+        }
+      },
+      "react": {
+        "version": "detect"
+      }
+    }
+  },
+  "lint-staged": {
+    ".scss": "npm run lint:style",
+    ".{ts,tsx}": "npm run lint"
   },
   "name": "twiv2",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "lint": "eslint . --ext .ts,.tsx --fix",
+    "lint:style": "stylelint '**/*.scss' --fix",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install",
     "start": "next start"
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-sass-guidelines",
+      "stylelint-config-recommended-scss",
+      "stylelint-config-css-modules"
+    ],
+    "plugins": [
+      "stylelint-scss"
+    ],
+    "rules": {
+      "at-rule-no-unknown": [
+        true,
+        {
+          "ignoreAtRules": [
+            "include",
+            "mixin"
+          ]
+        }
+      ],
+      "color-named": [
+        "never",
+        {
+          "ignore": [
+            "inside-function"
+          ]
+        }
+      ],
+      "selector-class-pattern": null
+    }
   },
   "version": "0.1.0"
 }
